# dbw_project

./: README.md  hackathon_instructions.txt  hackathon_plan.txt
tamo_junto/: README.md  USAGE.md  api.py  app.py  final_guardian_report.md  install_ui.sh  pyproject.toml  report.md  revoker_trigger.json
tamo_junto/src/tamo_junto/: crew.py  crew_runner.py  main.py  run_ui.py  ui.py
tamo_junto/src/tamo_junto/config/: agents.yaml  inputs.py  tasks.yaml
tamo_junto/tamo_junto_jobs/72df7b1a-03d0-49da-9223-5a97babe93b5/: result.txt  status.json
tamo_junto/tamo_junto_jobs/cbfe17c3-7923-4c71-8e53-16b38272c586/: result.txt  status.json
